# fantasyfootball

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci-cd.yml  data_refresh.yml  is_working.yml  pipeline.yaml  tests.yml
data/season/2021/: betting.csv  calendar.csv  defense.csv  players.csv  stats.csv
datasets/season/2018/: betting.csv  calendar.csv  defense.csv  players.csv  stats.csv  weather.csv
datasets/season/2019/: betting.csv  calendar.csv  defense.csv  players.csv  stats.csv  weather.csv
datasets/season/2020/: betting.csv  calendar.csv  defense.csv  players.csv  stats.csv
datasets/season/2021/: betting.csv  calendar.csv  defense.csv  players.csv  projections.csv  stats.csv  weather.csv
docs/: Makefile  conf.py  example.ipynb  make.bat  requirements.txt
examples/: benchmarking.ipynb  inference.ipynb  tutorial.ipynb
examples/benchmarking_data/season/2018/: wk1.csv  wk10.csv  wk11.csv  wk12.csv  wk13.csv  wk14.csv  wk15.csv  wk16.csv  wk17.csv  wk2.csv  wk3.csv  wk4.csv  wk5.csv  wk6.csv  wk7.csv  wk8.csv  wk9.csv
examples/benchmarking_data/season/2019/: wk1.csv  wk10.csv  wk11.csv  wk12.csv  wk13.csv  wk14.csv  wk15.csv  wk16.csv  wk17.csv  wk2.csv  wk3.csv  wk4.csv  wk5.csv  wk6.csv  wk7.csv  wk8.csv  wk9.csv
examples/benchmarking_data/season/2020/: wk1.csv  wk10.csv  wk11.csv  wk12.csv  wk13.csv  wk14.csv  wk15.csv  wk16.csv  wk17.csv  wk2.csv  wk3.csv  wk4.csv  wk5.csv  wk6.csv  wk7.csv  wk8.csv  wk9.csv
examples/tutorial_data/: 2022-week-5-wr-rankings.csv
pipeline/: pipeline_config.py  pipeline_logger.py  pipeline_utils.py  test_logger.py  utils.py
pipeline/collect/: collect_adp.py  collect_betting.py  collect_calendar.py  collect_draft.py  collect_historical_betting.py  collect_historical_draft.py  collect_injury.py  collect_players.py  collect_salary.py  collect_stats.py  collect_weather.py
pipeline/load/: load_data.py
pipeline/process/: process_adp.py  process_betting.py  process_calendar.py  process_defense.py  process_draft.py  process_injury.py  process_players.py  process_salary.py  process_stats.py  process_weather.py
pipeline/save/: save_data.py
pipeline/validate/: validate_calendar.py  validate_data.py
src/fantasyfootball/: __init__.py  backtesting.py  benchmarking.py  config.py  data.py  errors.py  features.py
src/fantasyfootball/datasets/: stadiums.csv
src/fantasyfootball/pipeline/: pipeline_logger.py  utils.py
tests/: test_benchmarking.py  test_data.py  test_fantasyfootball.py  test_features.py  test_inference.py  test_utils.py
tests/pipeline/: test_utils.py
tests/pipeline/collect/: test_collect_stats.py
tests/pipeline/process/: test_process_betting.py  test_process_calendar.py  test_process_defense.py  test_process_injury.py  test_process_players.py  test_process_stats.py
(+32 files in other folders)
