[tool.poetry]
name = "fantasyfootball"
version = "0.1.4"
description = "A package for Fantasy Football data and analysis"
authors = ["Mark LeBoeuf"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
pandas = "^1.3.5"
requests = "^2.27.1"
lxml = "^4.7.1"
pyjanitor = "^0.22.0"
pandas-flavor = "^0.2.0"
scikit-learn = "^1.0.2"
sklearn = "^0.0"
openpyxl = "^3.0.9"
html5lib = "^1.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = "^22.3.0"
pylint = "^2.12.2"
ipykernel = "^6.6.1"
pre-commit = "^2.16.0"
isort = "^5.10.1"
flake8 = "^4.0.1"
meteostat = "^1.6.1"
pytest-cov = "^3.0.0"
fuzzywuzzy = "^0.18.0"
tabulate = "^0.8.9"
xgboost = "^1.6.0"
matplotlib = "^3.5.2"
tqdm = "^4.64.0"
beautifulsoup4 = "^4.11.1"
myst-nb = {version = "^0.15.0", python = "^3.9"}
sphinx-autoapi = "^1.8.4"
sphinx-rtd-theme = "^1.0.0"
pandera = "^0.11.0"
awswrangler = "^2.15.1"
python-Levenshtein = "^0.12.2"
python-semantic-release = "^7.31.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88

[tool.flake8]
max-line-length = 88
extend-ignore = "F401,W503,W605"
max-complexity = 10

[tool.isort]
line_length = 88
multi_line_output = 3
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.semantic_release]
version_variable = "pyproject.toml:version" 
branch = "main"                             
changelog_file = "CHANGELOG.md"             
build_command = "poetry build"              
dist_path = "dist/"                         
upload_to_release = true                    
upload_to_pypi = false                      
remove_dist = false                         
patch_without_tag = true                    